--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "axios": "^0.25.0",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
     "esm": "^3.2.25",
+    "fast-xml-parser": "^4.0.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.11.18",
     "node-cron": "^3.0.0",
