--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fast-xml-parser": "^4.0.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-compress": "^5.1.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
@@ -21,7 +22,8 @@
     "readline-sync": "^1.4.10",
     "selenium-webdriver": "^4.0.0-beta.1",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.1"
+    "winston-daily-rotate-file": "^4.5.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
