--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-prettier": "^8.1.0",
     "esm": "^3.2.25",
     "fast-xml-parser": "^4.0.1",
+    "fs": "^0.0.1-security",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
