--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
+    "koa-force-https": "^2.0.1",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
