--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "gamealive-server",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "axios": "^0.25.0",
     "dotenv": "^8.2.0",
-    "eslint-config-prettier": "^8.1.0",
     "esm": "^3.2.25",
     "fast-xml-parser": "^4.0.1",
     "fs": "^0.0.1-security",
@@ -20,16 +19,15 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.11.18",
-    "node-cron": "^3.0.0",
     "readline-sync": "^1.4.10",
-    "selenium-webdriver": "^4.0.0-beta.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "eslint-config-prettier": "^8.3.0"
   },
   "scripts": {
     "start": "node -r esm src",
