--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.11.18",
+    "node-cron": "^3.0.0",
     "readline-sync": "^1.4.10",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.1",
@@ -26,8 +27,8 @@
   },
   "devDependencies": {
     "eslint": "^7.20.0",
-    "nodemon": "^2.0.7",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "node -r esm src",
