--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
+    "koa-favicon": "^2.1.0",
     "koa-force-https": "^2.0.1",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
-    "mongoose": "^5.11.18",
+    "mongoose": "^6.0.0",
     "node-cron": "^3.0.0",
     "readline-sync": "^1.4.10",
     "winston": "^3.3.3",
